adjusted tablet view layout, fixed horizontal overflow

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -114,6 +114,18 @@
         @apply font-roundo-medium leading-none
     }
 
+    main {
+        @apply overflow-hidden md:overflow-visible
+    }
+
+    html {
+        overflow-x: clip;
+    }
+
+    body {
+        position: relative;
+        overflow-x: clip;
+    }
 
     .big-header {
         font-size: clamp(3.2rem, 1.8901rem + 3.4554vw, 4.6rem);
